diplom/d-site/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-frontend
  labels:
    app: nginx-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-frontend

  template:
    metadata:
      labels:
        app: nginx-frontend
    spec:
      containers:
      - name: nginx
        image: nginx:latest
      - name: d-webserver
        image: titovichia/d-webserver:1.0.0
        ports:
         - containerPort: 80
