diplom/d-site/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  # Порт сетевого балансировщика, на котором будут обслуживаться пользовательские запросы.
  - port: 80
    name: plaintext
    # Порт контейнера, на котором доступно приложение.
    targetPort: 8080
  # Метки селектора, использованные в шаблоне подов при создании объекта Deployment.
  selector:
    app: hello
  type: NodePort
