diplom/d-site/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - name: nginx
    nodePort: 30666
    port: 80
#    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-frontend
  type: LoadBalancer
