diplom/d-site/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nginx-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: front-svc
            port:
              number: 80

#      - path: "/api/"
#        pathType: Prefix
#        backend:
#          service:
#            name: back-svc
#            port:
#              number: 80
